<resources>
    <string name="app_name">XENONnT DAQ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_status">Status</string>
    <string name="menu_runs">Runs</string>
    <string name="menu_command">Control</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_contact">Contact</string>

    <string name="welcome_back">Welcome to the DAQ</string>
    <string name="read_it_together">Please log in...</string>
    <string name="login">Log in</string>
    <string name="email">Enter your email</string>
    <string name="password">Password</string>


</resources>
