<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/rootView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                tools:context=".MainActivity">

        <TextView
                android:id="@+id/WelcomeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textColor="@color/colorLightText"
                android:textSize="25sp"
                android:textStyle="bold" />
        <TextView
                android:id="@+id/readItTogetherTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/WelcomeTextView"
                android:layout_marginTop="10dp"
                android:text="@string/read_it_together"
                android:textColor="@color/colorLightText"
                android:textSize="15sp" />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/loginButton"
                android:layout_below="@+id/readItTogetherTextView"
                android:gravity="center"
                android:orientation="vertical">
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textColor="@color/colorTextView"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="15sp" />
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:hint="@string/password"
                    android:textColor="@color/colorTextView"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="15sp" />
        </LinearLayout>
        <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_above="@+id/skipTextView"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button_drawable"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="16sp" />
</RelativeLayout>